compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@trait__trait_instance_missing_fn.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/trait/trait_instance_missing_fn.test
input_file: compiler/eight-tests/tests/ui/trait/trait_instance_missing_fn.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::trait_instance_missing_fn

  × trait instance neg<i32, i32> does not derive method neg
    ╭─[tests/ui/trait/trait_instance_missing_fn.test:9:10]
  8 │ fn test(a: i32) -> i32 {
  9 │   return -a;
    ·          ─┬
    ·           ╰── trait instance neg<i32, i32> does not derive method neg
 10 │ }
    ╰────
